tket-hseries/src/llvm/snapshots/tket_hseries__llvm__random__test__emit_random_codegen@llvm14_3.snap
---
source: tket-hseries/src/llvm/random.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i32, {} } @_hl.main.1({} %0, i32 %1) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %rintb = call i32 @random_rng(i32 %1)
  %mrv = insertvalue { i32, {} } undef, i32 %rintb, 0
  %mrv7 = insertvalue { i32, {} } %mrv, {} zeroinitializer, 1
  ret { i32, {} } %mrv7
}

declare i32 @random_rng(i32)
