tket-hseries/src/llvm/snapshots/tket_hseries__llvm__random__test__emit_random_codegen@pre-mem2reg@llvm14_1.snap
---
source: tket-hseries/src/llvm/random.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i32, {} } @_hl.main.1({} %0) {
alloca_block:
  %"0" = alloca i32, align 4
  %"1" = alloca {}, align 8
  %"2_0" = alloca {}, align 8
  %"4_0" = alloca i32, align 4
  %"4_1" = alloca {}, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store {} %0, {}* %"2_0", align 1
  %"2_01" = load {}, {}* %"2_0", align 1
  %rint = call i32 @random_int()
  store i32 %rint, i32* %"4_0", align 4
  store {} zeroinitializer, {}* %"4_1", align 1
  %"4_02" = load i32, i32* %"4_0", align 4
  %"4_13" = load {}, {}* %"4_1", align 1
  store i32 %"4_02", i32* %"0", align 4
  store {} %"4_13", {}* %"1", align 1
  %"04" = load i32, i32* %"0", align 4
  %"15" = load {}, {}* %"1", align 1
  %mrv = insertvalue { i32, {} } undef, i32 %"04", 0
  %mrv6 = insertvalue { i32, {} } %mrv, {} %"15", 1
  ret { i32, {} } %mrv6
}

declare i32 @random_int()
