tket-hseries/src/llvm/snapshots/tket_hseries__llvm__random__test__emit_random_codegen@pre-mem2reg@llvm14_3.snap
---
source: tket-hseries/src/llvm/random.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i32, {} } @_hl.main.1({} %0, i32 %1) {
alloca_block:
  %"0" = alloca i32, align 4
  %"1" = alloca {}, align 8
  %"2_0" = alloca {}, align 8
  %"2_1" = alloca i32, align 4
  %"4_0" = alloca i32, align 4
  %"4_1" = alloca {}, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store {} %0, {}* %"2_0", align 1
  store i32 %1, i32* %"2_1", align 4
  %"2_01" = load {}, {}* %"2_0", align 1
  %"2_12" = load i32, i32* %"2_1", align 4
  %rintb = call i32 @random_rng(i32 %"2_12")
  store i32 %rintb, i32* %"4_0", align 4
  store {} zeroinitializer, {}* %"4_1", align 1
  %"4_03" = load i32, i32* %"4_0", align 4
  %"4_14" = load {}, {}* %"4_1", align 1
  store i32 %"4_03", i32* %"0", align 4
  store {} %"4_14", {}* %"1", align 1
  %"05" = load i32, i32* %"0", align 4
  %"16" = load {}, {}* %"1", align 1
  %mrv = insertvalue { i32, {} } undef, i32 %"05", 0
  %mrv7 = insertvalue { i32, {} } %mrv, {} %"16", 1
  ret { i32, {} } %mrv7
}

declare i32 @random_rng(i32)
